# alfred-caniuse-rs

./: .cspell.yml  .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: ci.yml  clippy-fmt.yml  dependabot-reviewer.yml  lint.yml  linux.yml
assets/: alfred-caniuse-rs.afdesign
src/: cache.rs  db.rs  lib.rs  main.rs  models.rs  update.rs
