[package]
name = "alfred-caniuse-rs"
version = "0.1.2"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2018"
license = "MIT"

[dependencies]
alfred = "4.0"
dirs = "3.0"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.10"
time = { version = "0.2", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
zstd = "0.6"

[profile.release]
# lto = true
# opt-level = "z"
