[package]
name = "alfred-caniuse-rs"
version = "0.4.1"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2021"
license = "MIT"

[dependencies]
alfred = "4"
dirs = "5"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.10"
time = { version = "0.3", features = ["parsing", "formatting", "macros", "serde"] }
ureq = { version = "2", features = ["json"] }
zstd = "0.12"

[profile.release]
lto = true
opt-level = "z"
